<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mimoaly.truthordare.PlayerActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tealLight"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitle="@string/location_subtitle"
        app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:subtitleTextColor="@color/white"
        app:title="@string/location_title"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:titleTextColor="@color/white" />


    <android.support.v7.widget.Toolbar
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/tealLight"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitle="@string/player_bottom_text"
        app:subtitleTextAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:subtitleTextColor="@color/white" />
</RelativeLayout>
