<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.mimoaly.truthordare.LocationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tealLight"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitle="@string/location_subtitle"
        app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:subtitleTextColor="@color/white"
        app:title="@string/location_title"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:titleTextColor="@color/white" />


    <android.support.v7.widget.Toolbar
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/tealLight"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitle="@string/location_bottom_text"
        app:subtitleTextAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:subtitleTextColor="@color/white" />

    <ImageButton
        android:id="@+id/indoor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/outdoor_button"
        android:layout_marginStart="98dp"
        android:layout_toEndOf="@+id/outdoor_button"
        android:background="@color/white"
        app:srcCompat="@mipmap/ic_outdoor" />

    <ImageButton
        android:id="@+id/outdoor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/top_toolbar"
        android:layout_marginStart="90dp"
        android:layout_marginTop="155dp"
        android:background="@color/white"
        app:srcCompat="@mipmap/ic_house" />

    <TextView
        android:id="@+id/indoor_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Indoor"
        android:layout_below="@+id/outdoor_button"
        android:layout_alignStart="@+id/outdoor_button" />

    <TextView
        android:id="@+id/outdoor_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Outdoor"
        android:layout_below="@+id/indoor_button"
        android:layout_alignStart="@+id/indoor_button" />

</RelativeLayout>
